# Fluxora

./: .gitignore  AGENTS.md  Build.ps1  LICENSE  README.md
.agents/: PROJECT_RULES.md
Output/: Fluxora.App.deps.json
Output/lang/: de.json  en.json
backend/: CMakeLists.txt
backend/include/FluxoraCore/: Core.hpp  FluxoraCoreApi.hpp
backend/include/FluxoraCore/GameSupport/: DefinitionBackedGameSupport.hpp  GameDefinition.hpp  GameDefinitionLoader.hpp  GameDetectionService.hpp  GameHealthCheckService.hpp  GameSupportRegistry.h  GameSupportRegistry.hpp  GameTypes.hpp  IGameSupport.h  IGameSupport.hpp  ProjectFingerprint.hpp  SkyrimSpecialEditionSupport.hpp
backend/include/FluxoraCore/Services/: AppSettingsService.hpp  BuildPathSettingsService.hpp  BulkFileCopyService.hpp  ContentLayoutService.hpp  DownloadService.hpp  ExecutableIconService.hpp  ExecutableService.hpp  FluxPackService.hpp  FomodInstallerService.hpp  HookService.hpp  IService.hpp  Logger.hpp  ModOrganizerExecutableImportService.hpp  ModOrganizerImportService.hpp  ModOrganizerPluginGroupService.hpp  ModOrganizerProfileOrderService.hpp  ModService.hpp  NexusModsAuthService.hpp  PathSafetyService.hpp  PluginService.hpp  ProfileOrderService.hpp  ProjectService.hpp  TemplateService.hpp  VirtualFileSystemService.hpp
backend/include/FluxoraCore/Storage/: AtomicFileStore.hpp  InstanceMetadataStore.hpp  ProjectStateTransaction.hpp
backend/include/FluxoraCore/Support/: JsonReader.hpp  JsonWriter.hpp
backend/include/FluxoraInstaller/: FluxoraInstallerApi.hpp
backend/resources/GameDefinitions/: skyrimse.json
backend/resources/Schemas/: game-definition.schema.json
backend/src/: Core.cpp  FluxoraCoreApi.cpp
backend/src/GameSupport/: DefinitionBackedGameSupport.cpp  GameDefinitionLoader.cpp  GameDetectionService.cpp  GameHealthCheckService.cpp  GameSupportRegistry.cpp  ProjectFingerprint.cpp  SkyrimSpecialEditionSupport.cpp
backend/src/Installer/: FluxoraInstallerApi.cpp
backend/src/Services/: AppSettingsService.cpp  BuildPathSettingsService.cpp  BulkFileCopyService.cpp  ContentLayoutService.cpp  DownloadService.cpp  ExecutableIconService.cpp  ExecutableService.cpp  FluxPackService.cpp  FomodInstallerService.cpp  HookService.cpp  Logger.cpp  ModOrganizerExecutableImportService.cpp  ModOrganizerImportService.cpp  ModOrganizerPluginGroupService.cpp  ModOrganizerProfileOrderService.cpp  ModService.cpp  NexusModsAuthService.cpp  PathSafetyService.cpp  PluginService.cpp  ProfileOrderService.cpp  ProjectService.cpp  TemplateService.cpp  VirtualFileSystemService.cpp
backend/src/Storage/: AtomicFileStore.cpp  InstanceMetadataStore.cpp  ProjectStateTransaction.cpp
backend/tests/: AppSettingsServiceTests.cpp  AtomicFileStoreTests.cpp  BuildPathSettingsServiceTests.cpp  CMakeLists.txt  ContentLayoutServiceTests.cpp  DownloadServiceTests.cpp  ExecutableServiceTests.cpp  FluxPackServiceTests.cpp  FomodInstallerServiceTests.cpp  GameDefinitionLoaderTests.cpp  GameDetectionHealthServiceTests.cpp  GameSupportRegistryTests.cpp  GameTypesTests.cpp  HookServiceTests.cpp  InstanceMetadataStoreTests.cpp  JsonSupportTests.cpp  LoggerTests.cpp  ModFileOperationsIntegrationTests.cpp  ModOrganizerImportServiceTests.cpp  ModOrganizerPluginGroupServiceTests.cpp  ModOrganizerProfileOrderServiceTests.cpp  NexusModsAuthServiceTests.cpp  PathSafetyServiceTests.cpp  PluginServiceTests.cpp  ProjectServiceTests.cpp  ProjectStateTransactionTests.cpp  TemplateServiceTests.cpp  TestFilesystem.hpp  VfsTreeTests.cpp
backend/vfs/: FluxoraVfs.def  README.md
backend/vfs/include/FluxoraVfs/: NtApi.hpp  VfsConfig.hpp  VfsHooks.hpp  VfsLog.hpp  VfsProtocol.hpp  VfsTree.hpp
backend/vfs/src/: DllMain.cpp  VfsConfig.cpp  VfsHooks.cpp  VfsLog.cpp  VfsTree.cpp
frontend/: App.xaml  App.xaml.cs  BuildSettingsWindow.xaml  BuildSettingsWindow.xaml.cs  ExecutableManagerWindow.xaml  ExecutableManagerWindow.xaml.cs  Fluxora.App.csproj  FomodInstallerWindow.xaml  FomodInstallerWindow.xaml.cs  InstallModWindow.xaml  InstallModWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
frontend.Tests/: Fluxora.App.Tests.csproj
frontend.Tests/Models/: DownloadEntryTests.cs  ModEntryTests.cs  TemplateBridgeShapeTests.cs
frontend.Tests/Services/: ApplicationLogServiceTests.cs  ExecutableLaunchSessionStoreTests.cs  GameCapabilityResolverTests.cs  ModArchiveFileFilterTests.cs  RangeSelectionServiceTests.cs  SelectionInputServiceTests.cs  SeparatorCollapseServiceTests.cs
frontend.Tests/ViewModels/: BuildCreationProcessViewModelTests.cs  BuildDeletionProcessViewModelTests.cs  ExecutableLaunchProcessViewModelTests.cs  ExecutableMenuItemTests.cs  FluxPackInstallProcessViewModelTests.cs  FluxPackPackageProcessViewModelTests.cs  FomodInstallerViewModelTests.cs  MainWindowViewModelBuildInfoTests.cs  MainWindowViewModelCapabilityTests.cs  MainWindowViewModelGameTemplateSearchTests.cs  MainWindowViewModelModInstallPlacementTests.cs  MainWindowViewModelModSearchTests.cs  ModFileTreeNodeTests.cs  ModOperationProcessViewModelTests.cs  RelayCommandTests.cs  StartupSplashViewModelTests.cs
frontend.Tests/Views/: ProgressBarBindingModeTests.cs
frontend/Assets/: Icons.xaml
frontend/Controls/: LineIcon.cs
frontend/Models/: BuildDeletionProgress.cs  BuildPathSettings.cs  BuildSettingsResult.cs  ConfirmDialogOptions.cs  DownloadEntry.cs  ExecutableLaunchSession.cs  FluxPackInstallProgress.cs  FluxPackInstallProviderProgress.cs  FluxPackInstallResult.cs  FluxPackSummary.cs  FomodInstallerInfo.cs  GameDefinitionBridgeModels.cs  GameExecutableEntry.cs  GameExecutableLaunchResult.cs  GameTemplateOption.cs  ICollapsibleListItem.cs  LanguageOption.cs  ModEntry.cs  ModFileTreeEntry.cs  ModOrganizerImportAnalysis.cs  ModOrganizerImportProgress.cs  ModProject.cs  NexusModsAuthStatus.cs  PluginEntry.cs  ResolvedTemplate.cs  StartupProgress.cs  TransferDriveOption.cs
frontend/Properties/: AssemblyInfo.cs
frontend/Services/: AnimatedCollapseBehavior.cs  ApplicationLogService.cs  BuildConfigPickerService.cs  BuildDeletionDialogService.cs  (+56 more)
(+84 files in other folders)
